syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.acme.logistics.warehouse.grpc";
option java_outer_classname = "WarehouseProto";

package warehouse;

service WarehouseGrpcService {
    rpc CheckStock (StockRequest) returns (StockResponse);
    rpc ReserveStock (ReserveRequest) returns (ReserveResponse);
    rpc ReleaseStock (ReleaseRequest) returns (ReleaseResponse);
    rpc GetItem (ItemRequest) returns (ItemResponse);
}

message StockRequest {
    int64 product_id = 1;
    int32 quantity = 2;
}

message StockResponse {
    bool available = 1;
    int32 available_quantity = 2;
    string message = 3;
}

message ReserveRequest {
    int64 product_id = 1;
    int32 quantity = 2;
}

message ReserveResponse {
    bool success = 1;
    string message = 2;
}

message ReleaseRequest {
    int64 product_id = 1;
    int32 quantity = 2;
}

message ReleaseResponse {
    bool success = 1;
    string message = 2;
}

message ItemRequest {
    int64 product_id = 1;
}

message ItemResponse {
    int64 id = 1;
    int64 product_id = 2;
    string product_name = 3;
    string category = 4;
    int32 quantity_available = 5;
    int32 quantity_reserved = 6;
    string location = 7;
    double price_per_unit = 8;
    bool found = 9;
}
